Thu Oct  6 14:26:31 2005  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DAnCE/ExecutionManager/DAM_Map.cpp:
        * DAnCE/ExecutionManager/Execution_Manager_Impl.cpp:
        * DAnCE/Plan_Launcher/DAM_Map.cpp:
        * DAnCE/Plan_Launcher/Plan_Launcher.cpp:
        * DAnCE/Plan_Launcher/Plan_Launcher_Impl.cpp:
        * ciao/Container_Impl.cpp:
        * ciao/NodeApplication_Impl.cpp:
        * ciao/Servant_Activator.cpp:

          Fixed the debug statements to look for critical levels
          no more than 9.

Thu Oct  6 14:00:16 2005  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * ciao/Container_Base.cpp:
        * ciao/Container_Impl.cpp:

          Added debug messages and comments.

Thu Oct  6 12:30:40 2005  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * ciao/NodeApplication_Impl.cpp:

          Added debug messages and comments.

Thu Oct  6 08:00:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/ExecutionManager/Execution_Manager_Impl.cpp:
        * DAnCE/DomainApplicationManager/Deployment_Configuration.cpp:
          Fixed compile problems

Wed Oct  5 17:42:24 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* tools/Config_Handlers/Any_Handler.cpp

	Part of previous commit.

Wed Oct  5 17:07:07 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* docs/schema/Basic_Deployment_Data.xsd
	* docs/schema/cdd.xsd

	Moved recursive Domain data into cdd.xsd.  This will hopefully
	lessen the time required to compile.

	* tools/Config_Handlers/CPD_Handler.cpp
	* tools/Config_Handlers/DataType_Handler.cpp

	Fixed some potential run-time bugs in Borland.  Style
	corrections.

	* tools/Config_Handlers/Basic_Deployment_Data.cpp
	* tools/Config_Handlers/Basic_Deployment_Data.hpp
	* tools/Config_Handlers/Deployment.cpp
	* tools/Config_Handlers/Deployment.hpp
	* tools/Config_Handlers/ccd.cpp
	* tools/Config_Handlers/ccd.hpp
	* tools/Config_Handlers/cdd.cpp
	* tools/Config_Handlers/cdd.hpp
	* tools/Config_Handlers/cdp.cpp